[package]
name = "bemtevi"
version = "0.1.0"
authors = ["skypartan <lucasgb@skypartan.net>"]
edition = "2018"

[dependencies]
rand = "*"
serenity = { version = "*", features = ["client", "standard_framework", "voice", "rustls_backend"] }
songbird = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
